unpackaged/main/default/objects/OrderApi__Shipping_Method__c/OrderApi__Shipping_Method__c.object-meta.xml
<CustomObject>
    <description>The delivery method that the carrier provides to ship item.</description>
    <label>Delivery Method</label>
    <nameField>
        <label>Delivery Method Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Delivery Methods</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>