unpackaged/main/default/objects/OrderApi__Shipping_Method__c/fields/OrderApi__Description__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Description__c</fullName>
    <description>Description for Delivery Method.</description>
    <inlineHelpText>Description for Delivery Method.</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>