unpackaged/main/default/objects/OrderApi__Shipping_Method__c/fields/OrderApi__Display_Name__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Display_Name__c</fullName>
    <description>Display Name For Delivery Method.</description>
    <inlineHelpText>Display Name For Delivery Method.</inlineHelpText>
    <label>Display Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>