unpackaged/main/default/objects/OrderApi__Shipping_Method__c/fields/OrderApi__Is_Default__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Is_Default__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The default delivery method for shipping an item.</description>
    <inlineHelpText>Select the checkbox to make this the Default Delivery Method.</inlineHelpText>
    <label>SYSTEM</label>
    <type>Checkbox</type>
</CustomField>