unpackaged/main/default/objects/OrderApi__Shipping_Method__c/fields/OrderApi__Shipping_Carrier_Item_Class__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Shipping_Carrier_Item_Class__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Identifies the related Shipping Carrier.</description>
    <inlineHelpText>Identifies the related Shipping Carrier.</inlineHelpText>
    <label>Shipping Carrier</label>
    <referenceTo>OrderApi__Item_Class__c</referenceTo>
    <relationshipLabel>Delivery Methods</relationshipLabel>
    <relationshipName>Delivery_Methods</relationshipName>
    <type>Lookup</type>
</CustomField>